// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Certificate Stack Has Certificate Arn Output 1`] = `
Object {
  "Value": Object {
    "Ref": "Certificate4E7ABB08",
  },
}
`;

exports[`Data Stack Has Content Write Access Policy Arn Output 1`] = `
Object {
  "Export": Object {
    "Name": "WriteContentPolicyArn",
  },
  "Value": Object {
    "Ref": "OriginContentWriteAccess40742427",
  },
}
`;

exports[`Distribution stack has distribution 1`] = `"CDNCFDistribution5C555532"`;
